working discount manager without single edition

--- a/src/classes/AS_Community_BasketItem_Controller.cls
+++ b/src/classes/AS_Community_BasketItem_Controller.cls
@@ -10,8 +10,14 @@ public with sharing class AS_Community_BasketItem_Controller {
         return AS_Order_Service.getBasketOrder();
     }
 
+//    @AuraEnabled
+//    public static void updateOrderItem(OrderItem orderItem) {
+//        update orderItem;
+//    }
+
     @AuraEnabled
-    public static void updateOrderItem(OrderItem orderItem) {
+    public static void updateOrderItem(String orderItemId, String quantity) {
+        OrderItem orderItem = new OrderItem(Id = orderItemId, Quantity = Decimal.valueOf(quantity));
         update orderItem;
     }
 
