--- a/src/classes/AS_DiscountManager_Controller.cls
+++ b/src/classes/AS_DiscountManager_Controller.cls
@@ -43,13 +43,16 @@ public with sharing class AS_DiscountManager_Controller {
 
     @AuraEnabled
     public static AS_Product_Service.SearchProductsWrapper getSearchProductsWrapper(String inpTxt) {
-        return AS_Product_Service.getSearchProductsWrapper(inpTxt, 0);
+        System.debug('WCHODZI DO CONTROLLERA STD');
+        return AS_Product_Service.getSearchProductsWrapperWithStandardPrice(inpTxt, 0);
     }
 
     @AuraEnabled
     public static void createDiscountApex(String discount, Boolean isPercent, String startDate, String endDate, List<AS_Product_Service.ProductInfoWrapper> wrappers) {
+        System.debug('WCHODZI DO DISCOUNT CONTROLLER');
         AS_PriceBook_Service.createDiscountPricebook(discount, isPercent, startDate, endDate, wrappers);
     }
+
 
 
 }
