--- a/src/classes/AS_Product_Service.cls
+++ b/src/classes/AS_Product_Service.cls
@@ -10,17 +10,113 @@ public with sharing class AS_Product_Service {
         return new SearchProductsWrapper(wrappers, numberOfProducts, queryLimit, searchPhrase, offset);
     }
 
+    public static AS_Product_Service.SearchProductsWrapper getSearchProductsWrapperWithStandardPrice(String searchPhrase, Integer offset) {
+        System.debug('WCHODZI DO SERWISU STD');
+
+        Integer queryLimit = Integer.valueOf(System.Label.AS_Community_SearchLimit);
+
+        List<ProductInfoWrapper> wrappers = productInfoWrappersStandardPrice(searchPhrase, offset);
+
+        Integer numberOfProducts = countProducts(searchPhrase);
+
+        return new SearchProductsWrapper(wrappers, numberOfProducts, queryLimit, searchPhrase, offset);
+    }
+
+
     public static List<ProductInfoWrapper> productInfoWrappers(String phrase, Integer offset) {
         Integer queryLimit = Integer.valueOf(System.Label.AS_Community_SearchLimit);
         List<PricebookEntry> productsInfo = new List<PricebookEntry>();
 
-        productsInfo = Database.query(pricebookEntryQuery(phrase, queryLimit, offset));
+        productsInfo = Database.query(pricebookEntryQuery(phrase));
+
+        List<ProductInfoWrapper> cheapestInfoWrappers = convertToInfoWrappers(productsInfo);
+        return returnListWithLimitAndOffset(cheapestInfoWrappers, queryLimit, offset);
+    }
+
+
+    public static List<ProductInfoWrapper> returnListWithLimitAndOffset(List<ProductInfoWrapper> wrappers, Integer queryLimit, Integer offset) {
+        System.debug('/////////////////////////////////////');
+        System.debug('/////////////////////////////////////');
+        System.debug('WRAPPERS');
+        for (ProductInfoWrapper w : wrappers) {
+            System.debug(w);
+        }
+
+        System.debug('/////////////////////////////////////');
+        List<ProductInfoWrapper> limitedList = new List<AS_Product_Service.ProductInfoWrapper>();
+
+        Integer startLoop;
+        Integer endLoop;
+        if (offset < wrappers.size()) {
+            startLoop = offset;
+        } else {
+            startLoop = 0;
+        }
+
+        if ((offset + queryLimit) < wrappers.size()) {
+            endLoop = (offset + queryLimit);
+        } else {
+            endLoop = wrappers.size();
+        }
+
+        for (Integer i = startLoop; i < endLoop; i++) {
+            ProductInfoWrapper wrapper = wrappers.get(i);
+            limitedList.add(wrapper);
+        }
+
+        System.debug('WRAPPER WITH OFFSET');
+        for (ProductInfoWrapper w : limitedList) {
+            System.debug(w);
+        }
+        System.debug('/////////////////////////////////////');
+        System.debug('/////////////////////////////////////');
+        return limitedList;
+    }
+
+
+    public static List<ProductInfoWrapper> productInfoWrappersStandardPrice(String phrase, Integer offset) {
+        System.debug('WCHODZI DO productInfoWrappersStandardPrice STD');
+
+        Integer queryLimit = Integer.valueOf(System.Label.AS_Community_SearchLimit);
+        List<PricebookEntry> productsInfo = new List<PricebookEntry>();
+
+        productsInfo = Database.query(pricebookEntryQueryStandardPrice(phrase, queryLimit, offset));
 
         return convertToInfoWrappers(productsInfo);
 
     }
 
-    private static String pricebookEntryQuery(String phrase, Integer queryLimit, Integer offset) {
+    private static String pricebookEntryQuery(String phrase) {
+
+        AS_QueryBuilder queryBuilder = new AS_QueryBuilder();
+
+        List<String> providedParameters = new List<String>{
+                'Product2.Name',
+                'Product2.Family'
+        };
+
+        List<String> selectedFields = new List<String>{
+                'Id',
+                'UnitPrice',
+                'StandardPrice__c',
+                'Product2Id',
+                'Product2.Name',
+                'Product2.Family',
+                'Product2.Description',
+                'Product2.mainPictureId__c'
+        };
+
+        queryBuilder.readyQuery_PricebookEntry_cheapestPrice_returnIfFieldsContainPhrase_andIsActive
+                (selectedFields, 'PricebookEntry', phrase, providedParameters, 'OR');
+        System.debug('QUERY:');
+        queryBuilder.printQuery();
+        return queryBuilder.returnQuery();
+
+    }
+
+    private static String pricebookEntryQueryStandardPrice(String phrase, Integer queryLimit, Integer offset) {
+        System.debug('WCHODZI DO pricebookEntryQueryStandardPrice STD');
+
 
         AS_QueryBuilder queryBuilder = new AS_QueryBuilder();
 
@@ -44,41 +140,16 @@ public with sharing class AS_Product_Service {
                 (selectedFields, 'PricebookEntry', phrase, providedParameters, 'OR');
         queryBuilder.addLimit(queryLimit);
         queryBuilder.addOffset(offset);
-        System.debug('QUERY:');
+        System.debug('QUERY STANDARD:');
         queryBuilder.printQuery();
         return queryBuilder.returnQuery();
 
     }
 
     private static List<ProductInfoWrapper> convertToInfoWrappers(List<PricebookEntry> pbEntries) {
-        System.debug('WCHODZI DO : convertToInfoWrappers' );
         List<ProductInfoWrapper> wrappers = new List<ProductInfoWrapper>();
 
-        Map<String, List<PricebookEntry>> pbMap = new Map<String, List<PricebookEntry>>();
-        System.debug('WCHODZI DO : convertToInfoWrappers 11' );
-
-        for (PricebookEntry p : pbEntries) {
-            System.debug('WCHODZI DO : convertToInfoWrappers 22' );
-
-            String productName = p.Product2.Name;
-            System.debug('WCHODZI DO : convertToInfoWrappers 33' );
-
-            if (pbMap.containsKey(productName)) {
-                System.debug('WCHODZI DO : convertToInfoWrappers 44' );
-
-                List<PricebookEntry> entries = new List<PricebookEntry>();
-                entries = pbMap.get(productName);
-                entries.add(p);
-                pbMap.put(productName, entries);
-            } else {
-                System.debug('WCHODZI DO : convertToInfoWrappers 55' );
-
-                List<PricebookEntry> entries = new List<PricebookEntry>();
-                entries.add(p);
-                pbMap.put(productName, entries);
-            }
-        }
-        System.debug('WCHODZI DO : convertToInfoWrappers 66' );
+        Map<String, List<PricebookEntry>> pbMap = groupPbEntryByName(pbEntries);
 
         for (String key : pbMap.keySet()) {
             List<PricebookEntry> entries = pbMap.get(key);
@@ -89,11 +160,41 @@ public with sharing class AS_Product_Service {
         return wrappers;
     }
 
-    public static ProductInfoWrapper returnCheapestWrapper(List<PricebookEntry> entries) {
-        System.debug('WCHODZI DO : returnCheapestWrapper' );
+    public static Map<String, List<PricebookEntry>> groupPbEntryByName(List<PricebookEntry> entries){
+        Map<String, List<PricebookEntry>> pbMap = new Map<String, List<PricebookEntry>>();
 
+        for (PricebookEntry p : entries) {
+            String productName = p.Product2.Name;
+
+            if (pbMap.containsKey(productName)) {
+
+                List<PricebookEntry> entries = new List<PricebookEntry>();
+                entries = pbMap.get(productName);
+                entries.add(p);
+                pbMap.put(productName, entries);
+            } else {
+
+                List<PricebookEntry> entries = new List<PricebookEntry>();
+                entries.add(p);
+                pbMap.put(productName, entries);
+            }
+        }
+
+        return pbMap;
+
+    }
+
+    public static ProductInfoWrapper returnCheapestWrapper(List<PricebookEntry> entries) {
+        System.debug('WCHODZI DO : returnCheapestWrapper');
+        System.debug('LISTA PRODUKTÓW');
+        System.debug('//////////////////');
+        for (PricebookEntry p : entries) {
+            System.debug(p);
+        }
+        System.debug('//////////////////');
         PricebookEntry pbe = entries[0];
         String productId = pbe.Product2Id;
+        String pricebookEntryId = pbe.Id;
         Decimal price = pbe.UnitPrice;
         Decimal standardPrice = pbe.StandardPrice__c;
         String mainPicture = pbe.Product2.mainPictureId__c;
@@ -105,9 +206,10 @@ public with sharing class AS_Product_Service {
                 standardPrice = p.StandardPrice__c;
                 mainPicture = p.Product2.mainPictureId__c;
                 productName = p.Product2.Name;
+                pricebookEntryId = p.Id;
             }
         }
-        return new ProductInfoWrapper(productId, mainPicture, productName, String.valueOf(price), String.valueOf(standardPrice));
+        return new ProductInfoWrapper(productId, mainPicture, productName, String.valueOf(price), String.valueOf(standardPrice),pricebookEntryId);
     }
 
     public static Integer countProducts(String phrase) {
@@ -131,17 +233,24 @@ public with sharing class AS_Product_Service {
 
     }
 
-    public static String getProductPrice(String productId) {
-        Decimal price = [
+    public static AS_Product_Service.ProductInfoWrapper getProductInfoWrapperForDetailsPage(String productId) {
+        List<PricebookEntry> pricesEntries = [
                 SELECT
-                        UnitPrice
+                        UnitPrice,
+                        StandardPrice__c,
+                        Pricebook2Id,
+                        Name,
+                        Id,
+                        Product2.Name,
+                        Product2.mainPictureId__c
                 FROM PricebookEntry
                 WHERE Product2Id = :productId
-        ][0].UnitPrice;
+                AND IsActive = true
+                AND Pricebook2.IsActive = true
+        ];
 
-        return String.valueOf(price);
+        return returnCheapestWrapper(pricesEntries);
     }
-
 
     public static String getCheapestPrice(String productId) {
         List<PricebookEntry> pricebookEntries = [
@@ -174,6 +283,8 @@ public with sharing class AS_Product_Service {
         @auraEnabled
         public String productId { get; set; }
         @auraEnabled
+        public String pricebookEntryId { get; set; }
+        @auraEnabled
         public String mainPictureId { get; set; }
         @auraEnabled
         public String productName { get; set; }
@@ -197,6 +308,15 @@ public with sharing class AS_Product_Service {
             this.productName = productName;
             this.price = price;
             this.standardPrice = standardPrice;
+        }
+
+        public ProductInfoWrapper(String productId, String mainPicId, String productName, String price, String standardPrice, String pricebookEntryId) {
+            this.productId = productId;
+            this.mainPictureId = mainPicId;
+            this.productName = productName;
+            this.price = price;
+            this.standardPrice = standardPrice;
+            this.pricebookEntryId = pricebookEntryId;
         }
 
     }
